duvet/src/comment/snapshots/duvet__comment__tokenizer__tests__configured.snap
---
source: duvet/src/comment/tokenizer.rs
expression: tokens
---
[
    Meta {
        key: "meta",
        value: "goes here",
        line: 2,
    },
    Content {
        value: "content goes here",
        line: 3,
    },
]
