duvet/src/comment/snapshots/duvet__comment__tokenizer__tests__duplicate_meta.snap
---
source: duvet/src/comment/tokenizer.rs
expression: tokens
---
[
    Meta {
        key: "meta",
        value: "1",
        line: 1,
    },
    Meta {
        key: "meta",
        value: "2",
        line: 2,
    },
]
