duvet/src/comment/snapshots/duvet__comment__tokenizer__tests__only_unnamed.snap
---
source: duvet/src/comment/tokenizer.rs
expression: tokens
---
[
    UnnamedMeta {
        value: "this is meta",
        line: 1,
    },
    UnnamedMeta {
        value: "this is other meta",
        line: 2,
    },
]
